--- a/PortFolion/PortFolion/GraphComponent/GraphTab.xaml
+++ b/PortFolion/PortFolion/GraphComponent/GraphTab.xaml
@@ -140,7 +140,7 @@
                     <TreeView ItemsSource="{Binding Root}" Style="{StaticResource VirtualisedMetroTreeView}">
                         <TreeView.ItemContainerStyle>
                             <Style TargetType="{x:Type TreeViewItem}" BasedOn="{StaticResource MetroTreeViewItem}">
-                                <Setter Property="IsSelected" Value="{Binding IsSelected}"/>
+                                <Setter Property="IsSelected" Value="{Binding IsSelected,Mode=TwoWay}"/>
                                 <Setter Property="IsExpanded" Value="{Binding IsExpand,Mode=TwoWay}"/>
                                 <Setter Property="FontWeight" Value="Normal" />
                                 <Style.Triggers>
