--- a/PortFolion/PortFolion/GraphComponent/GraphBullets.xaml
+++ b/PortFolion/PortFolion/GraphComponent/GraphBullets.xaml
@@ -12,6 +12,8 @@
              xmlns:l="http://schemas.livet-mvvm.net/2011/wpf"
              xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+             xmlns:cnv="clr-namespace:PortFolion.Views.Converter"
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
 
@@ -20,6 +22,12 @@
             <!--<selector:GraphTemplateSelector x:Key="GraphTemplateSelector"/>-->
             <selector:ChartTemplateSelector x:Key="ChartTemplateSelector"/>
             <!--<selector:MenuTemplateSelector x:Key="MenuTemplateSelector"/>-->
+            <ObjectDataProvider x:Key="BalanceCFKey" MethodName="GetValues" ObjectType="{x:Type sys:Enum}">
+                <ObjectDataProvider.MethodParameters>
+                     <x:Type TypeName="vm:BalanceCashFlow"/>
+                </ObjectDataProvider.MethodParameters>
+            </ObjectDataProvider>
+            <cnv:BalanceCFToStringConverter x:Key="BalanceCFConv"/>
             
             <BooleanToVisibilityConverter x:Key="BoolToVisibilityConv"/>
 
@@ -108,44 +116,107 @@
             </DataTemplate>
 
             <DataTemplate x:Key="BalanceChartTemplate">
-                <StackPanel Orientation="Horizontal">
-                    <Grid Visibility="{Binding IsMenuOpen,Converter={StaticResource BoolToVisibilityConv},Mode=TwoWay}">
-                        <CheckBox Content="対数軸" IsChecked="{Binding IsLogChart}">
-                            <i:Interaction.Triggers>
-                                <i:EventTrigger EventName="Checked">
-                                    <ei:ChangePropertyAction TargetName="Normalc"
-                                                                PropertyName="Visibility"
-                                                                Value="Collapsed"/>
-                                </i:EventTrigger>
-                                <i:EventTrigger EventName="Checked">
-                                    <ei:ChangePropertyAction TargetName="Logc"
-                                                                PropertyName="Visibility"
-                                                                Value="Visible"/>
-                                </i:EventTrigger>
+                <mah:SplitView x:Name="Pane" IsPaneOpen="{Binding IsMenuOpen,Mode=TwoWay}" OpenPaneLength="130" PanePlacement="Left" DisplayMode="Inline" 
+                               PaneBackground="Transparent">
+                    <mah:SplitView.Pane>
+                        <DockPanel>
+                            <StackPanel DockPanel.Dock="Top" Orientation="Vertical">
+                                <CheckBox Content="対数軸" IsChecked="{Binding IsLogChart}" Margin="5">
+                                    <i:Interaction.Triggers>
+                                        <i:EventTrigger EventName="Checked">
+                                            <ei:ChangePropertyAction TargetName="Normalc"
+                                                                        PropertyName="Visibility"
+                                                                        Value="Collapsed"/>
+                                        </i:EventTrigger>
+                                        <i:EventTrigger EventName="Checked">
+                                            <ei:ChangePropertyAction TargetName="Logc"
+                                                                        PropertyName="Visibility"
+                                                                        Value="Visible"/>
+                                        </i:EventTrigger>
 
-                                <i:EventTrigger EventName="Uncheked">
-                                    <ei:ChangePropertyAction TargetName="Normalc"
-                                                                PropertyName="Visibility"
-                                                                Value="Visible"/>
-                                </i:EventTrigger>
-                                <i:EventTrigger EventName="Uncheked">
-                                    <ei:ChangePropertyAction TargetName="Logc"
-                                                                PropertyName="Visibility"
-                                                                Value="Collapsed"/>
-                                </i:EventTrigger>
-                            </i:Interaction.Triggers>
-                        </CheckBox>
-                    </Grid>
-                    <StackPanel>
+                                        <i:EventTrigger EventName="Uncheked">
+                                            <ei:ChangePropertyAction TargetName="Normalc"
+                                                                        PropertyName="Visibility"
+                                                                        Value="Visible"/>
+                                        </i:EventTrigger>
+                                        <i:EventTrigger EventName="Uncheked">
+                                            <ei:ChangePropertyAction TargetName="Logc"
+                                                                        PropertyName="Visibility"
+                                                                        Value="Collapsed"/>
+                                        </i:EventTrigger>
+                                    </i:Interaction.Triggers>
+                                </CheckBox>
+                                <CheckBox Content="損益表示" IsChecked="{Binding VisiblePL}" Margin="5"/>
+                                <StackPanel Orientation="Vertical">
+                                    <TextBlock Text="キャッシュフロー :" HorizontalAlignment="Left"/>
+                                    <ComboBox ItemsSource="{Binding Source={StaticResource BalanceCFKey}}" SelectedValue="{Binding CashFlowDrawPattern}" HorizontalAlignment="Right">
+                                        <ComboBox.ItemTemplate>
+                                            <DataTemplate>
+                                                <TextBlock Text="{Binding Converter={StaticResource BalanceCFConv}}"/>
+                                            </DataTemplate>
+                                        </ComboBox.ItemTemplate>
+                                    </ComboBox>
+                                </StackPanel>
+                            </StackPanel>
+                            <!--<ToggleButton DockPanel.Dock="Bottom" IsChecked="{Binding IsMenuOpen,Mode=TwoWay}" 
+                                          HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="5">
+                                <ToggleButton.Template>
+                                    <ControlTemplate>
+                                        <Border BorderThickness="1" CornerRadius="3" BorderBrush="{StaticResource {x:Static SystemColors.ControlDarkBrushKey}}">
+                                            <TextBlock Text="閉じる" VerticalAlignment="Center" Margin="5,0"/>
+                                        </Border>
+                                    </ControlTemplate>
+                                </ToggleButton.Template>
+                            </ToggleButton>-->
+                        </DockPanel>
+                    </mah:SplitView.Pane>
+                    <StackPanel Orientation="Vertical">
                         <ContentControl x:Name="Normalc" Visibility="Visible" ContentTemplate="{StaticResource NormalChartTemplate}" Content="{Binding}"/>
                         <ContentControl x:Name="Logc" Visibility="Collapsed" ContentTemplate="{StaticResource LogChartTemplate}" Content="{Binding}"/>
                     </StackPanel>
-                </StackPanel>
-                
+                </mah:SplitView>
+            </DataTemplate>
+
+            <DataTemplate x:Key="IndexChartTemplate">
+                <mah:SplitView IsPaneOpen="{Binding IsMenuOpen,Mode=TwoWay}" OpenPaneLength="100" PanePlacement="Left" DisplayMode="Inline"
+                               PaneBackground="Transparent">
+                    <mah:SplitView.Pane>
+                        <StackPanel Orientation="Vertical">
+                            <CheckBox Content="対数軸" IsChecked="{Binding IsLogChart}" Margin="5">
+                                    <i:Interaction.Triggers>
+                                        <i:EventTrigger EventName="Checked">
+                                            <ei:ChangePropertyAction TargetName="Normalc"
+                                                                        PropertyName="Visibility"
+                                                                        Value="Collapsed"/>
+                                        </i:EventTrigger>
+                                        <i:EventTrigger EventName="Checked">
+                                            <ei:ChangePropertyAction TargetName="Logc"
+                                                                        PropertyName="Visibility"
+                                                                        Value="Visible"/>
+                                        </i:EventTrigger>
+
+                                        <i:EventTrigger EventName="Uncheked">
+                                            <ei:ChangePropertyAction TargetName="Normalc"
+                                                                        PropertyName="Visibility"
+                                                                        Value="Visible"/>
+                                        </i:EventTrigger>
+                                        <i:EventTrigger EventName="Uncheked">
+                                            <ei:ChangePropertyAction TargetName="Logc"
+                                                                        PropertyName="Visibility"
+                                                                        Value="Collapsed"/>
+                                        </i:EventTrigger>
+                                    </i:Interaction.Triggers>
+                                </CheckBox>
+                        </StackPanel>
+                    </mah:SplitView.Pane>
+                    <StackPanel Orientation="Vertical">
+                        <ContentControl x:Name="Normalc" Visibility="Visible" ContentTemplate="{StaticResource NormalChartTemplate}" Content="{Binding}"/>
+                        <ContentControl x:Name="Logc" Visibility="Collapsed" ContentTemplate="{StaticResource LogChartTemplate}" Content="{Binding}"/>
+                    </StackPanel>
+                </mah:SplitView>
             </DataTemplate>
 
             <DataTemplate x:Key="WeightChartTemplate"></DataTemplate>
-            <DataTemplate x:Key="LogableChartTemplate"></DataTemplate>
             
             <DataTemplate x:Key="GraphTemplate" DataType="{x:Type vm:GraphVmBase}">
                 <Grid>
@@ -156,7 +227,7 @@
                     <DockPanel HorizontalAlignment="Stretch" Grid.Row="0">
                         <StackPanel DockPanel.Dock="Left" Orientation="Horizontal" HorizontalAlignment="Left">
                             <Button Content="{iconPacks:PackIconMaterial Kind=ArrowUp,Width=10,Height=10}"
-                                    IsEnabled="{Binding IndexUpCommand.CanExecute}">
+                                    IsEnabled="{Binding IndexUpCommand.CanExecute}" ToolTip="上へ移動">
                                 <i:Interaction.Triggers>
                                     <i:EventTrigger EventName="Click">
                                         <i:InvokeCommandAction Command="{Binding IndexUpCommand}"/>
@@ -164,7 +235,7 @@
                                 </i:Interaction.Triggers>
                             </Button>
                             <Button Content="{iconPacks:PackIconMaterial Kind=ArrowDown,Width=10,Height=10}"
-                                    IsEnabled="{Binding IndexDownCommand.CanExecute}">
+                                    IsEnabled="{Binding IndexDownCommand.CanExecute}" ToolTip="下へ移動">
                                 <i:Interaction.Triggers>
                                     <i:EventTrigger EventName="Click">
                                         <i:InvokeCommandAction Command="{Binding IndexDownCommand}"/>
@@ -173,12 +244,12 @@
                             </Button>
                             <ToggleButton Content="{iconPacks:PackIconMaterial Kind=Settings,Width=10,Height=10}"
                                           Visibility="{Binding VisibilityMenu,Converter={StaticResource BoolToVisibilityConv}}"
-                                          IsChecked="{Binding IsMenuOpen,Mode=TwoWay}" Margin="5,0,0,0">
+                                          IsChecked="{Binding IsMenuOpen,Mode=TwoWay}" Margin="5,0,0,0" ToolTip="表示設定">
                             </ToggleButton>
                         </StackPanel>
 
                         <Button DockPanel.Dock="Right"
-                                Content="{iconPacks:PackIconMaterial Kind=Close,Width= 10,Height=10}">
+                                Content="{iconPacks:PackIconMaterial Kind=Close,Width= 10,Height=10}" ToolTip="閉じる">
                             <i:Interaction.Triggers>
                                 <i:EventTrigger EventName="Click">
                                     <ei:CallMethodAction TargetObject="{Binding}" MethodName="Dispose"/>
@@ -205,19 +276,15 @@
                               Content="{iconPacks:PackIconMaterial Kind=Menu,Height=10}"/>
             </Grid>
         </GroupBox.Header>
-        <mah:SplitView Margin="-5" DisplayMode="Overlay" PanePlacement="Right" OpenPaneLength="120"
+        <mah:SplitView Margin="-5" DisplayMode="Overlay" PanePlacement="Right" OpenPaneLength="120" PaneBackground="Transparent"
                        IsPaneOpen="{Binding IsChecked,ElementName=menu,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}">
             <mah:SplitView.Pane>
                 <ScrollViewer VerticalScrollBarVisibility="Auto">
                     <StackPanel Orientation="Vertical" x:Name="menuItems">
                         
                         <ToggleButton Content="残高/CF/PL" Margin="0,2" IsChecked="{Binding VisibleBalance}" Style="{StaticResource MetroFlatToggleButton}"/>
-                        <ToggleButton Content="残高&amp;CF" Margin="0,2" IsChecked="{Binding VisibleTransition}" Style="{StaticResource MetroFlatToggleButton}"/>
-                        <ToggleButton Content="残高&amp;累積CF"  Margin="0,2" IsChecked="{Binding VisibleTransitionStackCF}" Style="{StaticResource MetroFlatToggleButton}"/>
-                        <ToggleButton Content="損益" Margin="0,2" IsChecked="{Binding VisibleTransitionPL}" Style="{StaticResource MetroFlatToggleButton}"/>
-                        <ToggleButton Content="指数" Margin="0,2" IsChecked="{Binding VisibleIndex}" Style="{StaticResource MetroFlatToggleButton}"/>
+                        <ToggleButton Content="基準価額" Margin="0,2" IsChecked="{Binding VisibleIndex}" Style="{StaticResource MetroFlatToggleButton}"/>
                         <ToggleButton Content="収益率" Margin="0,2" IsChecked="{Binding VisibleVolatility}" Style="{StaticResource MetroFlatToggleButton}"/>
-                        <ToggleButton Content="比率推移" Margin="0,2" Style="{StaticResource MetroFlatToggleButton}" Visibility="Hidden"/>
                         <ToggleButton Content="内訳推移" Margin="0,2" Style="{StaticResource MetroFlatToggleButton}" Visibility="Hidden"/>
                     </StackPanel>
                 </ScrollViewer>
